# SVGnest

./: .gitignore  readme.md
svgnest_cli/: Cargo.toml
svgnest_cli/src/: dxf_parser.rs  ga.rs  geometry.rs  lib.rs  line_merge.rs  main.rs  nfp.rs  part.rs  svg_parser.rs
svgnest_cli/tests/: cli.rs  nfp.rs
svgnest_cli/tests/fixtures/: arc.dxf  bin.dxf  part.dxf  rings.dxf
