[package]
name = "svgnest_cli"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
roxmltree = "0.20"
svg-path-parser = "0.1"
lyon_path = "0.17"
lyon_svg = "0.17"
anyhow = "1"
geo = "0.30.0"
geo-clipper = "0.9.0"
rand = "0.8"
rayon = "1"
dxf = { version = "0.6", optional = true }

[features]
default = ["dxf"]

[dev-dependencies]
assert_cmd = "2"
assert_fs = "1"
predicates = "3"
